# advent-of-code

./: .cspell.json  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
solutions/2015/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb  _4_worker.py
solutions/2023/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb
solutions/2024/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  2.ipynb  20.ipynb  21.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb
solutions/2025/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb
solutions/common/: __init__.py  template.ipynb  utils.py
solutions/common/templates/: default.ipynb  no_example_checking.ipynb
solutions/common/utils/: dict_grid.py  numpy_grid.py  perf_check.py
