[project]
  dependencies = [
    "advent-of-code-data[nb]>=2.1.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.2.2",
    "tqdm>=4.67.1",
  ]
  description = "My advent of code solutions"
  name = "advent-of-code"
  readme = "README.md"
  requires-python = ">=3.13"
  version = "0.1.0"

[dependency-groups]
2015 = [
    "networkx>=3.6.1",
]
  2025 = ["pandas>=2.3.3", "scipy>=1.16.3", "seaborn>=0.13.2", "shapely>=2.1.2"]
  dev  = ["pre-commit>=4.5.0", "ruff>=0.14.10"]

[tool.ruff]
  fix            = true
  line-length    = 120
  target-version = "py314"

  [tool.ruff.lint]
    fixable = ["ALL"]
    select  = ["ALL"]

    ignore = [
      # Prevent conflicts with formatter (see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
      "ANN204", # missing-return-type-special-method
      "COM812", # missing-trailing-comma
      "COM819", # prohibited-trailing-comma
      "E111",   # indentation-with-invalid-multiple
      "E114",   # indentation-with-invalid-multiple-comment
      "E117",   # over-indented
      "Q",      # flake8-quotes
      "W191",   # tab-indentation

      # Overly strict rules
      "D105", # undocumented-magic-method (magic methods are often self-explanatory)
      "D107", # undocumented-public-init (__init__ methods are often self-explanatory)

      # Project-specific ignores
      "S101", # assert is used for checking example solutions
      "S311", # no cryptographic randomness needed for AoC
      "T201", # print is used for showing results
    ]

    [tool.ruff.lint.pydocstyle]
      convention = "google"

    [tool.ruff.lint.pylint]
      allow-magic-value-types = ["int", "str"]
      max-args                = 10
